@@ -1,3 +1,6 @@
+# 2022/05/20
+- pull and tank for bard, mainly for farm stuff
+
 # 2022/02/27
 - lots of pull changes
 
